# Multi-Agent-Research-Assistant

./: README.md  main.py  pyproject.toml  research.db
agents/: planner_agent.py  report_agent.py  research_agent.py  researcher_agent.py  search_agent.py  summarizer_agent.py  writer_agent.py
api/: chat.py  documents.py  export.py  health.py  history.py  jobs.py  report.py  research.py  stats.py  system_check.py  upload.py
core/: config.py  exceptions.py  logger.py
database/: crud.py  db.py  models.py
orchestration/: state.py  workflow.py
schemas/: chat.py  history.py  request.py  response.py  search_response.py  status.py
services/: docx_service.py  llm_service.py  pdf_service.py  rag_service.py  report_storage.py  tavily_service.py
tests/: test_health.py  test_root.py
tools/: search_tool.py
vectorstore/: chroma.sqlite3
