[project]
name = "multi-agent-research-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.14.3",
    "fastapi>=0.136.3",
    "google-genai>=2.8.0",
    "google-generativeai>=0.8.6",
    "httpx>=0.28.1",
    "langchain>=1.3.9",
    "langgraph>=1.2.5",
    "pydantic>=2.13.4",
    "pytest>=9.1.0",
    "python-dotenv>=1.2.2",
    "reportlab>=4.5.1",
    "requests>=2.34.2",
    "sentence-transformers>=5.5.1",
    "sqlalchemy>=2.0.50",
    "tavily-python>=0.7.26",
    "uvicorn>=0.49.0",
]
